Scheduler for content saved in the articals table from 3 news API
